# Pellets

Python/: PelletNml.py  PelletSumfile.py  pellet.py
src/: CMakeLists.txt  README_INSTALL_PELLETS.txt  ajax_mod.f90  fluxav_mod.f90  fluxav_vmec.f  linear1_mod.f90  mirth_mod.f90  pellet_dr.f90  pellet_mod.f90  prl_mod.f90  prl_mod_intel.f90  prldata_mod.f90  setup_ajax.f90  spec_kind_mod.f90  spline1_mod.f90  track_mod.f90  write_mod.f90  x_mod.f90
